Change Log

==========

0.0.1 (10/02/2022)
------------------
- First Release

Date: 10/2/2022

1. Wrote README file
2. Add P gates method to gates.py
3. Add CU method to gates.py
4. Add view method to mode.py
5. Add log.txt for keeping track of changes

Date: 11/2/2022

1. Move to_su to maths.py
2. Move kron_decomp to quantum.py
3. Change default variable in the chi method to "x"

0.0.7 (12/02/2022)
------------------

Date: 12/02/2022

1. Import gates.py to quantum.py

0.0.8 (12/02/2022)
------------------

Date: 12/02/2022

1. Fix Quantum.double_cosets by importing the correct packages
2. Add default_import method to allow for faster import prompt
3. Change random_local_gates to random_local_ops and allow for creating more operation at the same time.
4. Allow for doing to_su on list of matrices.

0.0.11 (15/02/2022)
-------------------

Date 15/02/2022

1. Add view method to visualize numerical matrices
2. Add CAN method